# VISAO

./: .gitignore  README.md
acumular_zed/: CMakeLists.txt  package.xml
acumular_zed/launch/: lancar_processo_zed.launch
acumular_zed/resources/: visual.rviz
acumular_zed/src/: acumular_zed_node.cpp  salvar_zed_node.cpp
conversa_python/: Conversa_serial_mavlink.py
ler_tudo_junto/: CMakeLists.txt  package.xml
ler_tudo_junto/caminhos/: imagem_6_31_13h_40m.ply  kalman_completo_7_16_21h_23m.ply  kalman_completo_7_17_10h_27m.ply  kalman_completo_7_17_11h_1m.ply  kalman_completo_7_17_16h_57m.ply  kalman_completo_7_28_15h_31m.ply  kalman_completo_7_29_10h_30m.ply  kalman_completo_7_29_13h_24m.ply  kalman_completo_7_29_14h_58m.ply  kalman_simples_7_13_22h_42m.ply  kalman_simples_7_14_22h_12m.ply  placa_7_13_22h_42m.ply  placa_7_14_22h_12m.ply  placa_7_17_16h_57m.ply  placa_7_28_16h_24m.ply  placa_7_5_18h_9m.ply  placa_7_8_21h_3m.ply  placa_7_9_21h_4m.ply  placa_bom.ply  zed_6_21_23h_0m.ply  zed_6_21_23h_2m.ply  zed_6_22_9h_24m.ply  zed_6_22_9h_26m.ply  zed_7_13_22h_37m.ply  zed_7_13_22h_42m.ply  zed_7_14_22h_12m.ply  zed_7_17_11h_1m.ply  zed_7_17_14h_16m.ply  zed_7_28_16h_23m.ply  zed_7_5_15h_43m.ply  zed_7_5_18h_19m.ply  zed_7_8_20h_36m.ply  zed_7_9_21h_4m.ply  zed_bom.ply
ler_tudo_junto/launch/: gravar.launch  ler_tudo.launch  playback.launch
ler_tudo_junto/resources/: visual.rviz
ler_tudo_junto/src/: ler_tudo.cpp
libraries/: imagem.cpp  imagem2.cpp  kalman_completo.cpp  kalman_simples.cpp  placa.cpp  pose.h  zed.cpp
match_images/: CMakeLists.txt  package.xml
match_images/calibracao/: backpack.yaml  cadeira.yaml  flowers.yaml  left.yaml  piano.yaml  right.yaml  zed_left.yaml  zed_right.yaml
match_images/include/: imagem.h
match_images/launch/: lancar_match_image.launch
match_images/src/: imagem.cpp  match_images_node.cpp
read_sensors_pixhawk/: CMakeLists.txt  package.xml
read_sensors_pixhawk/launch/: lancar_read_sensor.launch
read_sensors_pixhawk/resources/: visual.rviz
read_sensors_pixhawk/src/: read_sensors_pixhawk_node.cpp
register/: CMakeLists.txt  package.xml
register/src/: register_node.cpp
salvar_imagens_sync/: CMakeLists.txt  image_list.cpp  package.xml
