<?xml version="1.0"?>
<package>
  <name>acumular_zed</name>
  <version>0.1.0</version>
  <description>The acumular_zed package</description>

  <maintainer email="vinicius.vidal@engenharia.ufjf.br">mrs</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export></export>
</package>
